[package]
name = "aster"
version = "0.1.0"
edition = "2021"
description = "A fast Chromium-based desktop browser with vertical tabs."

[dependencies]
webview2-com = "0.36"
windows = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging"
] }
