[package]
name = "aster"
version = "1.0.0-beta"
authors = ["Mohammed Ahyan <ahyan4529@gmail.com>"]
license = "MIT"
edition = "2021"
description = "Building the best browser possible by taking all the good features and aspects of other browsers and adding our own unique innovations all while ensuring your data is 100% yours. Aster browser data is stored locally, no tracking, no telemetry, no data collection. Everything is stored directly on your machine."

[[bin]]
name = "Aster"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
webview2-com = "0.36"
zip = { version = "2", default-features = false, features = ["deflate"] }
windows = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_Security_Cryptography",
    "Win32_System_Com",
    "Win32_System_Com_Urlmon",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging"
] }

[build-dependencies]
embed-resource = "2.4"
